--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "4.17.1",
     "joi": "^17.8.3",
     "mongoose": "^7.0.0",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "eslint": "7.19.0",
